gphoto2 (2.4.10-1) UNRELEASED; urgency=low

  * New upstream version
  * Added myself to Uploaders
  * Use "3.0 (quilt)" source format, drop all quilt machinery

 -- David Paleino <dapal@debian.org>  Fri, 12 Nov 2010 10:27:03 +0100

gphoto2 (2.4.5-3) unstable; urgency=low

  * Warn and exit with an error if files couldn't be written to
    disk (Closes: #512883)
  * Added myself to Uploaders

 -- David Paleino <dapal@debian.org>  Sun, 14 Nov 2010 17:14:36 +0100

gphoto2 (2.4.5-2) unstable; urgency=low

  * debian/control:
     - Actually version the B-D on libgphoto2-2-dev, since 2.4.5 is now
       needed (Closes: #523587).

 -- Cyril Brulebois <kibi@debian.org>  Sat, 11 Apr 2009 14:53:54 +0200

gphoto2 (2.4.5-1) unstable; urgency=low

  * New upstream release (Closes: #483807).
  * Adopt the package within pkg-phototools:
     - Set the Maintainer to the group.
     - Add Frederic Peters and myself as Uploaders.
     - Add Vcs-{Git,Browser} fields accordingly.
  * Add a Homepage field.
  * Add a watch file to monitor new upstream releases.
  * Patches:
     - Switch from dpatch to quilt.
     - Clean up debian/rules, which already uses the include.
     - Remove 10_getenv_home_copying.dpatch (already disabled), merged
       upstream.
     - Refresh 20_german_translation (and drop extension).
     - Drop 30_cdk_include.dpatch, no longer relevant: the only used cdk
       include is <cdk/cdk.h>, directly available under /usr/include.
  * debian/{compat,control}:
     - Switch to debhelper 7.
  * debian/rules:
     - Remove strange DEB_HOST_ARCH_OS tweaking. It might have been needed
       long ago, but it seems unlikely that it's still of some use now.
     - Remove CFLAGS handling. dpkg is supposed to do that now.
     - Remove useless comments, whitespaces.
     - Remove useless --with-cdk-prefix from ./configure's flags.
     - Drop the dh_makeshlibs call, there's no library here.
     - Various tiny cleanup.