@@ -1,0 +1,2 @@
+po/stamp-po
+po/*.gmo
