@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Debian PhotoTools Maintainers <pkg-phototools-devel@lists.alioth.debian.org>
 Uploaders: Frederic Peters <fpeters@debian.org>, Cyril Brulebois <kibi@debian.org>
  , David Paleino <dapal@debian.org>
-Build-Depends: debhelper (>= 7),
+Build-Depends: debhelper (>= 7.0.50~),
                type-handling (>= 0.2.1),
                libgphoto2-2-dev (>= 2.4.5),
                zlib1g-dev,
