@@ -1,18 +1,9 @@
 #!/usr/bin/make -f
 
-# Need to depend on the patch stamp, and need to pass a specific flag
-# to ./configure, hence a specific target:
-build:
-	dh build --before auto_configure
-	dh_auto_configure -- LDFLAGS="-Wl,-z,defs -Wl,--as-needed"
-	dh build --after auto_configure
+LDFLAGS="-Wl,-z,defs -Wl,--as-needed"
 
-# Make sure patches get unapplied:
-clean:
-	dh clean
-	# Make sure l10n files are properly rebuilt:
-	rm -f po/stamp-po po/*.gmo
+override_dh_auto_configure:
+	dh_auto_configure -- LDFLAGS="$(LDFLAGS)"
 
-# Everything else:
 %:
 	dh $@
